system/opentelemetry-operator/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webhook
  namespace: opentelemetry-operator-system
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: opentelemetry-operator
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
